--- a/style.css
+++ b/style.css
@@ -78,12 +78,23 @@ header{
 
 }
 .item{
-	color: #fff;
 	padding: 15px;
 	margin: 5px;
 	background: #3db5da;
 	border-radius: 3px;
 }
+.item-blue{
+	color: royalblue;
+}
+
+.item-nhl{
+	color: black;
+}
+
+.item-blackhawks{
+	color: red ;
+}
+
 /*
  Flexbox
  */
