--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 	color: black;
 }
 
+
+
 .img-nhl{
 	margin-top: 10px;
 	width: 300px;
@@ -68,6 +70,7 @@ header{
 	padding-right: 5%;
 	padding-bottom: 5%;
 	padding-top: 5%;
+	background-image:blues vs hawks;
 }
 .container{
 	padding: 10px;
