--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ header{
 	padding-right: 5%;
 	padding-bottom: 5%;
 	padding-top: 5%;
-	background-image:blues vs hawks;
+	background-image:blues vs hawks.jpeg;
 }
 .container{
 	padding: 10px;
