--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ header{
 }
 
 .nhl-background{
-	background-image: url(blues vs hawks.jpg);
+	background-image: url("blues vs hawks.jpg");
 }
 
 .container{
