--- a/style.css
+++ b/style.css
@@ -73,7 +73,12 @@ header{
 }
 
 .nhl-background{
-	background-image: url("blues vs hawks.jpg");
+	padding: 10px;
+	background: #fff;
+	border-radius: 5px;
+	margin: 45px auto;
+	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
+
 }
 
 .container{
