--- a/style.css
+++ b/style.css
@@ -73,12 +73,8 @@ header{
 }
 
 .nhl-background{
-	padding: 10px;
-	background: #fff;
-	border-radius: 5px;
-	margin: 45px auto;
-	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
-
+	background-image: url("blues vs hawks");
+	background-color: #cccccc;
 }
 
 .container{
@@ -123,7 +119,3 @@ header{
 	flex-grow: 4;
 }
 
-.nhl-background{
-	display: flex;
-	background-image: url("blues vs hawks.jpg");
-}
