--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 	transition: all .5s;
 	margin-left: 50pxS;
 	image: center;
+	background-color: transparent;
 }
 .img-nhl:hover{
 	transform: scale(1.06) rotate(10deg) ;
@@ -75,6 +76,7 @@ header{
 .nhl-background{
 	background-image: url("blues vs hawks");
 	background-color: #cccccc;
+	
 }
 
 .container{
