--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ header{
 }
 
 .nhl-background{
-	background-image: url("blues vs hawks");
+	background-image: url("blues vs hawks.jpg");
 	background-color: white;
 
 }
