--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ header{
 	margin: 5px;
 	background: #3db5da;
 	border-radius: 3px;
-	color: darkviolet;
+	color: orange;
 }
 .item-blue{
 	color: royalblue;
