--- a/style.css
+++ b/style.css
@@ -94,6 +94,14 @@ header{
 	background:#0000ff ;
 }
 
+.item-nhl{
+	background: #000;
+}
+
+.item-blackhawks{
+	background: #dc143c ;
+}
+
 /*
  Flexbox
  */
