--- a/style.css
+++ b/style.css
@@ -90,17 +90,7 @@ header{
 	border-radius: 3px;
 	color: #ccc;
 }
-.item-blue{
-	background:#0000ff ;
-}
 
-.item-nhl{
-	background:#000 ;
-}
-
-.item-blackhawks{
-	background:#dc143c ;
-}
 
 /*
  Flexbox
@@ -113,7 +103,7 @@ header{
  	 }
  .item{
  	flex-grow: 1;
-
+ 	background:#ffffff ;
  
  }
 .item-nhl{
