--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ header{
 .item{
 	padding: 15px;
 	margin: 5px;
-	background: #fff;
+	background: #f5fffa;
 	border-radius: 3px;
 	color: #ccc;
 }
@@ -103,7 +103,7 @@ header{
  	 }
  .item{
  	flex-grow: 1;
- 	background:#fff ;
+ 	
  
  }
 .item-nhl{
