--- a/style.css
+++ b/style.css
@@ -85,6 +85,14 @@ header{
 	color: #ccc;
 }
 
+.hockey{
+	padding: 10px;
+	background: #fff;
+	border-radius: 5px;
+	margin: 45px auto;
+	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
+}
+
 
 /*
  Flexbox
