--- a/style.css
+++ b/style.css
@@ -119,3 +119,11 @@ header{
 	justify-content: space-between;
 	border-color: #000;
 }
+
+.hockey-blues{
+	background: #f0f8ff;
+}
+
+.hockey-hawks{
+	background: #f08080;
+}
