--- a/style.css
+++ b/style.css
@@ -122,8 +122,10 @@ header{
 
 .hockey-blues{
 	background: #f0f8ff;
+	color: #f0f8ff;
 }
 
 .hockey-hawks{
 	background: #f08080;
+	color: #f08080;
 }
