--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ header{
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	border-color: #000;
+	background: #fff;
 }
 
 .hockey-blues{
