--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ header{
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	background: #fff;
 }
 
