--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ header{
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: space-evenly;
-	background: #fff;
+	background: #bfbfbf;
 }
 
 .hockey-blues{
