--- a/style.css
+++ b/style.css
@@ -95,7 +95,8 @@ header{
 
 .hockey-blues{
 	padding: 10px;
-	background: #fff;
+	background:#3333ff ;
+
 	border-radius: 5px;
 	margin: 45px auto;
 	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
