--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ header{
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: space-evenly;
-	background: #bfbfbf;
+	background: #f0f8ff;
 }
 
 .hockey-blues{
