--- a/style.css
+++ b/style.css
@@ -112,12 +112,19 @@ header{
 /*
  Flexbox
  */
+
+@media (min-width:  769px) {
+
+
+
  .container {
  	display: flex;
  	flex-direction: row ;
  	flex-wrap: wrap;
  	justify-content: space-between;
  	 }
+}
+
  .item{
  	flex-grow: 1;
  	
