--- a/style.css
+++ b/style.css
@@ -119,7 +119,8 @@ header{
 
  .container {
  	display: flex;
- 	flex-direction: row ;
+ 	flex-direction: column ;
+ 	align-items: center;
  	flex-wrap: wrap;
  	justify-content: space-between;
  	 }
