--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
 header{
 	font-size: 1.35em;
 	font-family: 'Varela Round', sans-serif;
-	background: #fff;
+	background: #e8e9e9;
 	padding-left: 5%;
 	padding-right: 5%;
 	padding-bottom: 5%;
@@ -71,7 +71,7 @@ header{
 
 .container{
 	padding: 10px;
-	background: #fff;
+	background: #e8e9e9;
 	border-radius: 5px;
 	margin: 45px auto;
 	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
