--- a/style.css
+++ b/style.css
@@ -117,13 +117,15 @@ header{
 
 
 
- .container {
+ .container,
+ .main-item {
  	display: flex;
- 	flex-direction: column ;
- 	align-items: center;
- 	flex-wrap: wrap;
- 	justify-content: space-between;
+ 	
  	 }
+ .container{
+ 	flex-direction: column;
+ 	align-items: center;
+ }
 }
 
  .item{
