--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
 header{
 	font-size: 1.35em;
 	font-family: 'Varela Round', sans-serif;
-	background: #e8e9e9;
+	background: #fff;
 	padding-left: 5%;
 	padding-right: 5%;
 	padding-bottom: 5%;
