--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ header{
 
 .container{
 	padding: 10px;
-	background: #e8e9e9;
+	background: #fff;
 	border-radius: 5px;
 	margin: 45px auto;
 	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
