--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ header{
 	background: #3366ff;
 	border-radius: 5px;
 	margin: 45px auto;
+	background: #3ff;
 	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
 }
 
