--- a/style.css
+++ b/style.css
@@ -93,10 +93,10 @@ header{
 
 .hockey-blues{
 	padding: 10px;
-	background: #3366ff;
+	background: #ff3333;
 	border-radius: 5px;
 	margin: 45px auto;
-	background: #3ff;
+	background: #ff3333;
 	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
 }
 
