--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .img-nhl{
 	margin-top: 10px;
 	width: 300px;
-	height: 300px;
+	height: 200px;
 	border-radius: 50%;
 	border: 10px royalblue;
 	transition: all .5s;
@@ -81,6 +81,10 @@ header{
 	margin: 5px;
 	border-radius: 3px;
 	color: #ccc;
+}
+
+.item-blues{
+	background: #1a1aff;
 }
 
 .hockey{
