--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ header{
 
 .hockey-blues{
 	padding: 10px;
-	background: #80ccff;
+	background: #b3e0ff;
 	border-radius: 5px;
 	margin: 45px auto;
 	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
