--- a/style.css
+++ b/style.css
@@ -112,6 +112,13 @@ header{
 	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
 }
 
+.blues-article{
+	padding: 15px;
+	margin: 5px;
+	border-radius: 3px;
+	color: #ccc;
+}
+
 .hockey-hawks{
 	padding: 10px;
 	border-radius: 5px;
