--- a/style.css
+++ b/style.css
@@ -86,14 +86,26 @@ header{
 
 .item-blue{
 	background: #3366ff;
+	padding: 15px;
+	margin: 5px;
+	border-radius: 3px;
+	color: #ccc;
 }
 
 .item-nhl{
 	background: #737373;
+	padding: 15px;
+	margin: 5px;
+	border-radius: 3px;
+	color: #ccc;
 }
 
 .item-blackhawks{
 	background: #ff3333;
+	padding: 15px;
+	margin: 5px;
+	border-radius: 3px;
+	color: #ccc;
 }
 
 .hockey{
