--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ header{
 	margin: 45px auto;
 	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
 	justify-content: space-between;
+	color: #000;
 
 }
 .item{
