--- a/style.css
+++ b/style.css
@@ -76,14 +76,13 @@ header{
 	margin: 45px auto;
 	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
 	justify-content: space-between;
-	color: #000;
 
 }
 .item{
 	padding: 15px;
 	margin: 5px;
 	border-radius: 3px;
-	color: #000;
+	color: #ccc;
 }
 
 .item-blue{
@@ -155,7 +154,7 @@ header{
  	
  	 }
  .container{
- 	flex-direction: column;
+ 	flex-direction: row;
  	align-items: center;
  	flex-wrap: wrap;
  }
