--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ header{
  	
  	 }
  .container{
- 	flex-direction: row;
+ 	flex-direction: column;
  	align-items: center;
  	flex-wrap: wrap;
  }
