--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ header{
  	
  	 }
  .container{
- 	flex-direction: column;
+ 	flex-direction: row;
  	align-items: center;
  	flex-wrap: wrap;
  }
@@ -185,7 +185,7 @@ header{
 
  .main-item{
  	flex-wrap: wrap;
- 	justify-content: space-around;
+ 	justify-content: space-evenly;
  	
  
  }
