--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ header{
  	
  	 }
  .container{
- 	flex-direction: row;
+ 	flex-direction: column;
  	align-items: center;
  }
 
@@ -165,6 +165,7 @@ header{
 	border-radius: 3px;
 	color: #ccc;
 	align-self: auto;
+	flex-direction: row;
 }
 
 }
