--- a/style.css
+++ b/style.css
@@ -75,8 +75,7 @@ header{
 	border-radius: 5px;
 	margin: 45px auto;
 	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
-	justify-content: space-between;
-	background: #000;
+	background: #ccc;
 
 }
 .main-item{
@@ -84,7 +83,6 @@ header{
 	margin: 5px;
 	border-radius: 3px;
 	color: #ccc;
-	justify-items: space-evenly;
 }
 
 
@@ -175,7 +173,7 @@ header{
 
 @media (min-width: 1025px) {
 	.container{
-		flex-direction: column;
+		flex-direction: row;
 		justify-content: space-between ;
 		flex-wrap: wrap;
 		align-items: center;
