--- a/style.css
+++ b/style.css
@@ -155,24 +155,16 @@ header{
  	
  	 }
  .container{
- 
+ 	flex-direction: column;
  	align-items: center;
+ 	flex-wrap: wrap;
  }
-
-.main-item{
-	padding: 15px;
-	margin: 5px;
-	border-radius: 10px;
-	color: #ccc;
-	align-self: auto;
-	flex-direction: column;
-	justify-items: space-around;
-}
 
 }
 
 @media (min-width: 1025px) {
 	.container{
+		flex-direction: column;
 		justify-content: space-between ;
 		flex-wrap: wrap;
 		align-items: center;
@@ -181,15 +173,10 @@ header{
 
  .container{
  	flex-wrap: wrap;
- 	flex-direction: row;
  }
 
- .main-item{
- 	flex-wrap: wrap;
- 	justify-content: space-evenly;
- 	flex-direction: row;
- 	
- 
+ .main-item{ 	
+ 	flex-grow: 1;
  }
 .item-nhl{
 	flex-grow: 4;
