--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ header{
 
 .bio{
 	padding: 10px;
-	background: #fff;
+	background: #ccc;
 	border-radius: 5px;
 	margin: 45px auto;
 	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
@@ -218,4 +218,6 @@ header{
 	display: flex;
 	flex-wrap: wrap;
 	align-content: center;
+	flex-direction: column;
+	justify-content: space-evenly;
 }
