--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ header{
 	border-radius: 5px;
 	margin: 45px auto;
 	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
+	text-align: center;
 }
 
 .hockey{
