--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ header{
 	border-radius: 5px;
 	margin: 45px auto;
 	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
-	background: #fff;
+	background: #ff3333;
 }
 
 /*
