--- a/style.css
+++ b/style.css
@@ -147,7 +147,6 @@ header{
 	margin: 5px;
 	border-radius: 3px;
 	color: #ccc;
-	background: #f33;
 }
 
 .hockey-hawks{
@@ -156,6 +155,7 @@ header{
 	margin: 45px auto;
 	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
 	background: #ff3333;
+	color: #000;
 }
 
 /*
