--- a/style.css
+++ b/style.css
@@ -142,6 +142,12 @@ header{
 	color: #ccc;
 }
 
+.blues-link{
+	padding: 15px;
+	margin: 5px;
+	border-radius: 3px;
+}
+
 .hawks-article{
 	padding: 15px;
 	margin: 5px;
