--- a/style.css
+++ b/style.css
@@ -163,6 +163,13 @@ header{
 	background: #ff3333;
 }
 
+.rivalry{
+	padding: 15px;
+	margin: 5px;
+	border-radius: 3px;
+	color: #ccc;
+}
+
 /*
  Flexbox
  */
@@ -235,4 +242,12 @@ header{
 	flex-direction: column;
 	justify-content: space-evenly;
 	background: #ccc;
+}
+
+.rivalry{
+	display: flex;
+	flex-wrap: wrap;
+	align-content: center;
+	flex-direction: column;
+	justify-content: space-evenly;
 }
