--- a/style.css
+++ b/style.css
@@ -164,10 +164,11 @@ header{
 }
 
 .rivalry{
-	padding: 15px;
-	margin: 5px;
-	border-radius: 3px;
-	color: #ccc;
+	padding: 10px;
+	border-radius: 5px;
+	margin: 45px auto;
+	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
+	background: #fff;
 }
 
 /*
