--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ header{
 	border-radius: 5px;
 	margin: 45px auto;
 	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
-	background: #000;
+	background: #ccc;
 }
 
 /*
