--- a/style.css
+++ b/style.css
@@ -53,6 +53,16 @@
 	image: center;
 }
 
+.img-NHL-fight{
+	margin-top: 10px;
+	width: 300px;
+	height: 200px;
+	border-radius: 50%;
+	border: 3px royalblue;
+	transition: all .5s;
+	margin-left: 50pxS;
+}
+
 .img-blackhawks:hover{
 	transform: scale(1.06) rotate(10deg) ;
 }
@@ -253,5 +263,5 @@ header{
 }
 
 .h1-rival{
-	
+
 }
