--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@
 }
 
 .img-blues-vs-hawks{
-	
+
 }
 
 header{
@@ -89,7 +89,7 @@ header{
 	border-radius: 5px;
 	margin: 45px auto;
 	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
-	background: #fff;
+	background: #000;
 
 }
 .main-item{
