--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ header{
 	border-radius: 5px;
 	margin: 45px auto;
 	box-shadow: 0 1.5px 0 0 rgba(0, 0, 0, 0.1);
-	background: #000;
+	background: #80b3ff;
 
 }
 .main-item{
