--- a/style.css
+++ b/style.css
@@ -269,10 +269,9 @@ header{
 
 .rivalry{
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: space-evenly;
-}
+	justify-content: space-evenly;}
 
 .fight{
 	display: flex;
